--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <div class="pill" data-filter="all" data-active="true" aria-pressed="true">All</div>
   <div class="pill" data-filter="lawsuit" data-active="false" aria-pressed="false">Lawsuit</div>
   <div class="pill" data-filter="drama" data-active="false" aria-pressed="false">Drama</div>
-  <div class="pill" data-filter="youtuber cease & desist" data-active="false" aria-pressed="false">Creator Cease</div>
+  <div class="pill" data-filter="youtuber cease & desist" data-active="false" aria-pressed="false">Creator Got Ceased By Roblox</div>
   <div class="pill" data-filter="roblox respond" data-active="false" aria-pressed="false">Platform News</div>
   <div class="pill" data-filter="child safety issue" data-active="false" aria-pressed="false">Child Safety Issue</div>
 </div>
